fix alignment of "University of Notre Dame" header on mobile

--- a/src/static/css/global.css
+++ b/src/static/css/global.css
@@ -3173,7 +3173,14 @@ li.menu-icon {
   #header.gtype .nddotedu {
     margin: 0 auto !important;
     float: none !important;
+    display: block !important;
   }
+  #header.gtype div a {
+    background-position: 50%;
+    background-size: 100%;
+    width: 100% !important;
+  }
+
   .hlhome {
     font-size: 22px;
     margin-left: 10px;
